fixes to fonts and text wrapping + switching to port 5003

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
     --font-size: clamp(1rem, 1.2vw, 2rem);
     background-color: rgb(30, 30, 30);
     color: whitesmoke;
@@ -32,8 +33,8 @@
   }
 
   .select {
-    font-size: var(--font-size);
-    font-variant-caps: titling-caps;
+    font-size: calc(var(--font-size) * 1.7);
+    font-variant-caps: all-petite-caps;
   }
 
   /* Wrapper for Content */
@@ -52,6 +53,7 @@
   /* Ensure Mobile Responsiveness */
   @media (max-width: 768px) {
     * {
+        font-family: Arial, Helvetica, sans-serif;
         --font-size: clamp(1rem, 2vw, 2rem);
         background-color: rgb(30, 30, 30);
         color: whitesmoke;
@@ -83,6 +85,7 @@
     border-radius: 0.4rem;
     border-color: whitesmoke;
     background: #535557;
+    font-variant-caps: all-petite-caps;
   }
 
   button {
@@ -94,4 +97,5 @@
     border-radius: 5px;
     cursor: pointer;
     font-size: var(--font-size);
+    font-variant-caps: all-petite-caps;
   }
